Added some markdown with links

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -1,6 +1,47 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Fake News Challenge\n",
+    "\n",
+    "http://www.fakenewschallenge.org/\n",
+    "\n",
+    "https://github.com/FakeNewsChallenge/fnc-1-baseline\n",
+    "\n",
+    "# 2. Technical Links\n",
+    "\n",
+    "## NLTK\n",
+    "\n",
+    "http://textminingonline.com/dive-into-nltk-part-iv-stemming-and-lemmatization\n",
+    "\n",
+    "https://www.dataquest.io/blog/natural-language-processing-with-python/\n",
+    "\n",
+    "http://www.nltk.org/book/ch03.html\n",
+    "\n",
+    "\n",
+    "## Tensorflow\n",
+    "https://www.tensorflow.org/tutorials/recurrent\n",
+    "\n",
+    "https://www.tensorflow.org/programmers_guide/reading_data\n",
+    "\n",
+    "## Sklearn\n",
+    "\n",
+    "http://scikit-learn.org/stable/modules/classes.html#module-sklearn.preprocessing\n",
+    "\n",
+    "## Markdown\n",
+    "\n",
+    "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
+    "\n",
+    "# 3. Papers\n",
+    "\n",
+    "https://www.ijcai.org/Proceedings/16/Papers/408.pdf\n",
+    "\n",
+    "https://www.overleaf.com/5276203cwvkhf#/16617343/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -29,7 +70,7 @@
     "\n",
     "def read_data(path='fnc-1-baseline/fnc-1'):\n",
     "    stances = pd.read_csv(path + '/train_stances.csv')\n",
-    "    stances.set_index('Body ID', inplace=True)\n",
+    "    stances.set_index('Body ID', inplace=True)s\n",
     "    \n",
     "    bodies = pd.read_csv(path + '/train_bodies.csv')\n",
     "    bodies.set_index('Body ID', inplace=True)\n",
@@ -229,7 +270,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -325,7 +368,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -336,6 +381,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
