Added link to keras documentation

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -37,6 +37,10 @@
     "\n",
     "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
     "\n",
+    "## Keras\n",
+    "\n",
+    "https://keras.io/getting-started/sequential-model-guide/\n",
+    "\n",
     "# 3. Papers\n",
     "\n",
     "https://www.ijcai.org/Proceedings/16/Papers/408.pdf\n",
