Moved the fit and transform for vectorizer to two different methods. Removed pandas columns. Added Pos mapping to string

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "FNC_PATH=\"fnc-1-baseline\"\n",
+    "FNC_PATH=\"/home/momchil/Documents/fakenews/fakenews/fnc-1-baseline\"\n",
     "\n",
     "#must add local path to the FNC utils, so we can import and reuse them\n",
     "sys.path.append(FNC_PATH + '/utils/')"
@@ -119,9 +119,7 @@
     "ds = read_data()\n",
     "train, validation = get_data_split(ds)\n",
     "print \"Train examples: %d\"%len(train)\n",
-    "print \"Test examples: %d\"%len(validation)\n",
-    "\n",
-    "train.head()"
+    "print \"Test examples: %d\"%len(validation)"
    ]
   },
   {
@@ -134,16 +132,16 @@
    },
    "outputs": [],
    "source": [
+    "import numpy\n",
     "import nltk\n",
     "import re\n",
+    "\n",
     "from sklearn import feature_extraction\n",
     "from sklearn import preprocessing\n",
-    "import numpy\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "    \n",
     "le = preprocessing.LabelEncoder()\n",
     "wnl = nltk.WordNetLemmatizer()\n",
-    "vectorizer = TfidfVectorizer(ngram_range=(1,3), lowercase=True, stop_words=\"english\")\n",
     "\n",
     "nltk.download('punkt')\n",
     "nltk.download('wordnet')\n",
@@ -170,19 +168,28 @@
     "    # Removes stopwords from a list of tokens\n",
     "    return words.apply(lambda l: [w for w in l if w not in feature_extraction.text.ENGLISH_STOP_WORDS])\n",
     "\n",
+    "def trainTFIDF(corpus):\n",
+    "    vectorizer = TfidfVectorizer(ngram_range=(1,1), lowercase=True, stop_words=\"english\")\n",
+    "    vectorizer.fit(corpus)\n",
+    "    \n",
+    "    return vectorizer\n",
+    "\n",
+    "def encode_pos(word):\n",
+    "    return ['_'.join(x) for x in nltk.pos_tag(word)]\n",
+    "\n",
     "def prepare_features(dataset):\n",
     "    #Usefull link https://www.dataquest.io/blog/natural-language-processing-with-python/\n",
-    "    #dataset.loc[:, 'Tokens'] = tokenize_sentenses(train['Headline'])\n",
-    "    #dataset.loc[:, 'Lemmas'] = lemmatize_tokens(dataset['Tokens'])\n",
-    "    #dataset.loc[:, 'StopRemoved'] = remove_stopwords(dataset['Lemmas'])\n",
-    "    #dataset.loc[:, 'TFIDF'] = vectorizer.fit_transform(dataset['Headline']).toarray().tolist()\n",
-    "    #dataset.loc[:, 'PosTags'] = dataset['Tokens'].apply(lambda x : nltk.pos_tag(x))\n",
+    "    tokens = tokenize_sentenses(dataset['Headline'])\n",
+    "    lemmas = lemmatize_tokens(tokens)\n",
+    "    no_stop_words = remove_stopwords(lemmas)\n",
+    "    pos_tags = no_stop_words.apply(encode_pos)\n",
+    "    tf_idf = vectorizer.transform(dataset['Headline'])\n",
     "    \n",
-    "    y = dense_to_one_hot(le.fit_transform(train['Stance']), 4)\n",
-    "    \n",
-    "    return dataset,  vectorizer.fit_transform(dataset['Headline']), y \n",
+    "    return tf_idf\n",
     "\n",
-    "train, matrix, train_labels = prepare_features(train)"
+    "vectorizer = trainTFIDF(train['articleBody'])\n",
+    "matrix = prepare_features(train)\n",
+    "train_labels = dense_to_one_hot(le.fit_transform(train['Stance']), 4)"
    ]
   },
   {
@@ -191,7 +198,8 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -231,7 +239,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
