Added gensim and w2v with pre-trained Google-News

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -59,10 +59,25 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "FNC_PATH=\"/home/momchil/Documents/fakenews/fakenews/fnc-1-baseline\"\n",
+    "HOME_DIR='.'\n",
+    "FNC_PATH='{}/fnc-1-baseline'.format(HOME_DIR)\n",
     "\n",
     "#must add local path to the FNC utils, so we can import and reuse them\n",
     "sys.path.append(FNC_PATH + '/utils/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import gensim\n",
+    "W2V_MODEL='{}/model/GoogleNews-vectors-negative300.bin'.format(HOME_DIR)\n",
+    "# Load Google's pre-trained Word2Vec model.\n",
+    "w2vmodel = gensim.models.KeyedVectors.load_word2vec_format(W2V_MODEL, binary=True)  \n"
    ]
   },
   {
@@ -132,14 +147,14 @@
    },
    "outputs": [],
    "source": [
-    "import numpy\n",
+    "import numpy as np\n",
     "import nltk\n",
     "import re\n",
     "\n",
     "from sklearn import feature_extraction\n",
     "from sklearn import preprocessing\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "    \n",
+    "\n",
     "le = preprocessing.LabelEncoder()\n",
     "wnl = nltk.WordNetLemmatizer()\n",
     "\n",
@@ -184,6 +199,8 @@
     "    no_stop_words = remove_stopwords(lemmas)\n",
     "    pos_tags = no_stop_words.apply(encode_pos)\n",
     "    tf_idf = vectorizer.transform(dataset['Headline'])\n",
+    "    #np.asmatrix(matrix.tolist())\n",
+    "    embeddings = no_stop_words.apply(lambda x: np.mean([w2vmodel[w] if w in w2vmodel.vocab else np.zeros(300) for w in x], axis=0 ))\n",
     "    \n",
     "    return tf_idf\n",
     "\n",
@@ -239,9 +256,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
