Added download link for Google News w2v model

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -75,6 +75,10 @@
    "outputs": [],
    "source": [
     "import gensim\n",
+    "\n",
+    "#Google news vectors link https://drive.google.com/file/d/0B7XkCwpI5KDYNlNUTTlSS21pQmM/view\n",
+    "#We can change it with fastText, but it's 6GB and it's super slow to download\n",
+    "\n",
     "W2V_MODEL='{}/model/GoogleNews-vectors-negative300.bin'.format(HOME_DIR)\n",
     "# Load Google's pre-trained Word2Vec model.\n",
     "w2vmodel = gensim.models.KeyedVectors.load_word2vec_format(W2V_MODEL, binary=True)  \n"
