Created a feature vector from embeddings and tf_idf of words. Changed the optimizer and params of the net for testing purposes

--- a/FakeNews.ipynb
+++ b/FakeNews.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "HOME_DIR='.'\n",
+    "HOME_DIR=''\n",
     "FNC_PATH='{}/fnc-1-baseline'.format(HOME_DIR)\n",
     "\n",
     "#must add local path to the FNC utils, so we can import and reuse them\n",
@@ -70,7 +70,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -136,9 +138,13 @@
    "outputs": [],
    "source": [
     "ds = read_data()\n",
+    "\n",
     "train, validation = get_data_split(ds)\n",
     "print \"Train examples: %d\"%len(train)\n",
-    "print \"Test examples: %d\"%len(validation)"
+    "print \"Test examples: %d\"%len(validation)\n",
+    "\n",
+    "print \n",
+    "print train['Stance'].value_counts()"
    ]
   },
   {
@@ -159,9 +165,6 @@
     "from sklearn import preprocessing\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "wnl = nltk.WordNetLemmatizer()\n",
-    "\n",
     "nltk.download('punkt')\n",
     "nltk.download('wordnet')\n",
     "nltk.download('averaged_perceptron_tagger')\n",
@@ -169,8 +172,8 @@
     "def dense_to_one_hot(labels_dense, num_classes):\n",
     "    \"\"\"Convert class labels from scalars to one-hot vectors.\"\"\"\n",
     "    num_labels = labels_dense.shape[0]\n",
-    "    index_offset = numpy.arange(num_labels) * num_classes\n",
-    "    labels_one_hot = numpy.zeros((num_labels, num_classes))\n",
+    "    index_offset = np.arange(num_labels) * num_classes\n",
+    "    labels_one_hot = np.zeros((num_labels, num_classes))\n",
     "    labels_one_hot.flat[index_offset + labels_dense.ravel()] = 1\n",
     "    return labels_one_hot\n",
     "\n",
@@ -187,8 +190,8 @@
     "    # Removes stopwords from a list of tokens\n",
     "    return words.apply(lambda l: [w for w in l if w not in feature_extraction.text.ENGLISH_STOP_WORDS])\n",
     "\n",
-    "def trainTFIDF(corpus):\n",
-    "    vectorizer = TfidfVectorizer(ngram_range=(1,1), lowercase=True, stop_words=\"english\")\n",
+    "def trainTFIDF(corpus, max_ngram):\n",
+    "    vectorizer = TfidfVectorizer(ngram_range=(1, max_ngram), lowercase=True, stop_words=\"english\", min_df=10, max_df=100)\n",
     "    vectorizer.fit(corpus)\n",
     "    \n",
     "    return vectorizer\n",
@@ -196,7 +199,12 @@
     "def encode_pos(word):\n",
     "    return ['_'.join(x) for x in nltk.pos_tag(word)]\n",
     "\n",
+    "def doc2vec(terms):\n",
+    "    return np.mean([w2vmodel[w] if w in w2vmodel.vocab else np.zeros(300) for w in terms], axis=0).tolist()\n",
+    "\n",
     "def prepare_features(dataset):\n",
+    "    from scipy.sparse import hstack\n",
+    "    \n",
     "    #Usefull link https://www.dataquest.io/blog/natural-language-processing-with-python/\n",
     "    tokens = tokenize_sentenses(dataset['Headline'])\n",
     "    lemmas = lemmatize_tokens(tokens)\n",
@@ -204,13 +212,35 @@
     "    pos_tags = no_stop_words.apply(encode_pos)\n",
     "    tf_idf = vectorizer.transform(dataset['Headline'])\n",
     "    #np.asmatrix(matrix.tolist())\n",
-    "    embeddings = no_stop_words.apply(lambda x: np.mean([w2vmodel[w] if w in w2vmodel.vocab else np.zeros(300) for w in x], axis=0 ))\n",
+    "    embeddings = np.asmatrix(no_stop_words.apply(doc2vec).tolist())\n",
     "    \n",
-    "    return tf_idf\n",
+    "    return hstack((tf_idf, embeddings)) \n",
     "\n",
-    "vectorizer = trainTFIDF(train['articleBody'])\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "wnl = nltk.WordNetLemmatizer()\n",
+    "vectorizer = trainTFIDF(train['Headline'], 2)\n",
     "matrix = prepare_features(train)\n",
-    "train_labels = dense_to_one_hot(le.fit_transform(train['Stance']), 4)"
+    "train_labels = dense_to_one_hot(le.fit_transform(train['Stance']), 4)\n",
+    "\n",
+    "print matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "w2vmodel = None\n",
+    "vectorizer = None\n",
+    "le = None\n",
+    "wnl = None\n",
+    "\n",
+    "gc.collect()"
    ]
   },
   {
@@ -225,6 +255,8 @@
    "outputs": [],
    "source": [
     "def train_model(x_train, y_train):\n",
+    "    from keras import metrics\n",
+    "    \n",
     "    x_train = x_train.toarray()\n",
     "    input_size = x_train.shape[1]\n",
     "    output_size = 4\n",
@@ -237,19 +269,19 @@
     "    # Dense(64) is a fully-connected layer with 64 hidden units.\n",
     "    # in the first layer, you must specify the expected input data shape:\n",
     "    # here, 20-dimensional vectors.\n",
-    "    model.add(Dense(64, activation='relu', input_dim=input_size))\n",
+    "    model.add(Dense(1024, activation='relu', input_dim=input_size))\n",
     "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(64, activation='relu'))\n",
+    "    model.add(Dense(512, activation='relu'))\n",
     "    model.add(Dropout(0.5))\n",
     "    model.add(Dense(output_size, activation='softmax'))\n",
     "\n",
-    "    sgd = SGD(lr=0.01, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "    #sgd = SGD(lr=1e-04, decay=2, momentum=0.9, nesterov=True)\n",
     "    model.compile(loss='categorical_crossentropy',\n",
-    "                  optimizer=sgd,\n",
+    "                  optimizer=\"rmsprop\",\n",
     "                  metrics=['accuracy'])\n",
     "\n",
     "    model.fit(x_train, y_train,\n",
-    "              epochs=20,\n",
+    "              epochs=15,\n",
     "              batch_size=128)\n",
     "    #score = model.evaluate(x_test, y_test, batch_size=16)\n",
     "    \n",
@@ -260,7 +292,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
